# cronus

./: .gitignore  README.md
cronus/: boot.md  debug.md  symbolize.py
cronus/linux/: upstream-tee-subsys-patches.txt
cronus/optee_benchmark/: .gitignore  LICENSE  README.md  benchmark_aux.c  benchmark_aux.h  common.h  main.c
cronus/optee_examples/: cpuenclave.mk  cudaenclave.mk  link.sh  vtacenclave.mk  vtaenclave.mk
cronus/optee_examples/gpu_hello_world/: CMakeLists.txt
cronus/optee_examples/hello_world/: CMakeLists.txt
cronus/optee_examples/hello_world_cuda/: CMakeLists.txt
cronus/optee_examples/mnist_cuda/: CMakeLists.txt
cronus/optee_examples/rodinia_bp/: CMakeLists.txt
cronus/optee_examples/rodinia_cuda/: CMakeLists.txt  check_cpu.c  rodinia_bench
cronus/optee_examples/rodinia_cuda/cpumenclave/: hello_world_ta.c
cronus/optee_examples/rodinia_cuda/cpumenclave/cuda/nn/: nn_cuda.cu
cronus/optee_examples/rodinia_cuda/cudamenclave/: gdev-cuda  hello_world_ta.c
cronus/optee_examples/rodinia_gs/: CMakeLists.txt
cronus/optee_examples/rodinia_hs/: CMakeLists.txt
cronus/optee_examples/rodinia_lud/: CMakeLists.txt
cronus/optee_examples/rodinia_nn/: CMakeLists.txt
cronus/optee_examples/rodinia_nw/: CMakeLists.txt
cronus/optee_examples/rodinia_pf/: CMakeLists.txt
cronus/optee_examples/rodinia_srad/: CMakeLists.txt
cronus/optee_examples/rodinia_srad/cudamenclave/: Makefile  hello_world_ta.c
cronus/optee_examples/vta_bench/: CMakeLists.txt
cronus/optee_os/: CMakeLists.txt
cronus/optee_os/ldelf/: main.c  ta_elf.c
cronus/qemu/: meson.build
cronus/soc_term/: .gitignore  Makefile
devices/vta_device/: CMakeLists.txt  sim_driver.cc  stmd_spin.hpp
devices/vta_device/test/: test_device.c
devices/vta_device/vmem/: virtual_memory.cc  virtual_memory.h
devices/vta_device/vta/: driver.h  hw_spec_const.h  vta_log.h  vtaconfig.h
docs/: app.md  config.md  server.md
micro_ae/: server.md
optee/: Makefile
optee-hix/optee_examples/: link.sh
optee-hix/optee_examples/rodinia_cuda/: CMakeLists.txt
optee-hix/optee_examples/rodinia_cuda/cpumenclave/: Makefile  sub.mk
optee-hix/optee_examples/rodinia_cuda/cpumenclave/cuda/gaussian/: gaussian.cu
optee-hix/optee_examples/rodinia_cuda/cpumenclave/cuda/hotspot/: hotspot.cu
optee-hix/optee_examples/rodinia_cuda/cpumenclave/cuda/lud/cuda/: lud.cu
optee-hix/optee_examples/rodinia_cuda/cpumenclave/cuda/nw/: needle.cu
optee-hix/optee_examples/rodinia_cuda/cpumenclave/cuda/pathfinder/: pathfinder.cu
optee-hix/optee_examples/rodinia_cuda/cudamenclave/: Makefile
optee-hix/optee_examples/rodinia_cuda/cudamenclave/cuda/b+tree/: Makefile
optee-hix/optee_examples/rodinia_cuda/cudamenclave/cuda/srad/srad_v2/: srad.cu
optee-hix/optee_os/: .gitignore
optee/optee_examples/: cpuenclave.mk  enclave.mk  vtaenclave.mk
scripts/: Makefile  aarch64-linux-gnu-nvcc.template
(+642 files in other folders)
